--- a/style.css
+++ b/style.css
@@ -1,29 +1,24 @@
 body{
-    font-family: "Montserrat", sans-serif;
-    /* margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%; */
-     max-width: 2880px;
-     max-height:1800px;
-      overflow-x: hidden;
-      margin: 0 auto;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
+    font-family: "Montserrat", sans-serif;
+    margin: 0 auto;
+    max-width: 2880px;
+    max-height:1800px;
+    overflow-x: hidden;
     overflow: hidden;
 }
 .main{
     display: flex;
-    padding: 0.5rem;
+    padding: 8px;
 }
-
 .sidebar{
     margin-top: px;
     background-color:#000000;
-    margin-right: 0.5rem;
+    margin-right: 8px;
     width: 380px;
     height: 570px;
-    border-radius: 0.9rem;
+    border-radius:15px;
 }
 .main-content{
     background-color: #121212;
@@ -31,9 +26,9 @@ body{
     display: flex;
     overflow-y: auto;
     scrollbar-width: none;
-    border-radius: 0.9rem;
+    border-radius: 15px;
     
-    margin-left: 5px;
+    margin-left: 0;
     padding-left: 25px;
 }
 .music-player{
@@ -110,8 +105,6 @@ a{
 }
 .search-icons {
     display: flex;
-
-
 }
 .search-icons button i {
     margin: 0px 0px 9px;
@@ -125,10 +118,10 @@ a{
 .home{
     height:30px;
     width: 30px;
-    margin-top: 0.5rem;
+    margin-top: 8px;
     width: 15px;
     padding: 15px 25px 10px 15px;
-    font-size: 1.25rem;
+    font-size: 20px;
     background-color: #121212;
     border-radius: 60px;
     opacity: 0.75;
@@ -168,42 +161,12 @@ a{
     opacity: 1;
     box-shadow: 0 2px 6px rgb(70, 67, 67);
 }
-
-
-
-/* .nav{
-   background-color: #121212;
-   border-radius: 0.9rem;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   height: 100px;
-   padding: 0.5rem 0.75rem;
-   width: 744px;
-
-}
-.nav-option{
-    line-height: 2.5rem;
-    opacity: 0.7;
-    padding-inline-start: 0.8rem;
-}
-.nav-option:hover{
-    opacity: 1;
-}
-.nav-option i {
-    font-size: 1.25rem;
-   margin-bottom: 0;
-}
-.nav-option a {
-    font-size: 1.25rem;
-    margin-left: 1rem;
-} */
 .library {
     background-color: #121212;
-    border-radius: 0.9rem;
-    padding: 0.5rem 0.75rem;
+    border-radius: 15px;
+    padding: 8px 12px;
     height: 100%;
-    margin-top: 0.6rem;
+    margin-top: 10px;
 }
 .options{
     margin: 13px;
@@ -214,16 +177,16 @@ a{
 
 }
 .lib-option img{
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 20px;
+    width: 20px;
 }
 .icons{
-    font-size: 1.25rem;
+    font-size: 20px;
     display: flex;
 }
 .icons i{
     opacity: 0.7;
-    margin-right: 1rem;
+    margin-right: 16px;
 }
 .icons i:hover{
     opacity: 1;
@@ -232,14 +195,12 @@ a{
 .lib-box{
     height: 133px;
     background-color: #1f1f1f;
-    margin: 2rem 0rem 1.2rem;
-    padding: 0.5rem 1.25rem;
-    border-radius: 0.9rem;
+    margin: 32px 0px 20px;
+    padding: 8px 20px;
+    border-radius: 15px;
     height: 132px;
     width: 300px;
-    row-gap: 8px;
-     
-    
+    row-gap: 8px;  
 }
 .box{
     height: 48px;
@@ -285,10 +246,10 @@ a{
 .card{
      height: 298px;
      width: 200px;
-     border-radius: 0.8rem;
-     padding: 1rem;
+     border-radius: 18px;
+     padding: 16px;
      background-color: #121212;
-     margin-right: 1.2rem;
+     margin-right: 19px;
      flex-wrap: wrap;
 }
 
@@ -297,12 +258,12 @@ a{
     transition-duration: 0.3s;
 }
 .card-info {
-    font-size: 0.95rem;
+    font-size: 15px;
     opacity: 0.75;
 }
 .card-img{
     width: 100%;
-    border-radius: 0.8rem;
+    border-radius: 1px;
     height: 200px;
     width: 200px;
 }
@@ -328,7 +289,7 @@ a{
     padding: 8px;
 }
 .play{
-    margin-left: 2.5rem;
+    margin-left: 40px;
     opacity: 0.7;
     justify-content: space-evenly;
 }
@@ -346,7 +307,7 @@ a{
     width: 362px;
 }
 .playbar img{
-    height: 1.2rem;
+    height: 19px;
 }
 .controls{
    width: 25% ; 
